just before we need a spy

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,10 +12,12 @@
   <script src="lib/jasmine-2.3.4/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="lib/Plane.js"></script>
+  <script src="src/Plane.js"></script>
+  <script src="src/Airport.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/SpecHelper.js"></script>
+  <script src="spec/AirportSpec.js"></script>
   <script src="spec/PlaneSpec.js"></script>
   <script src="spec/FeatureSpec.js"></script>
 
